# Copyright (c) 2025 iShawyha. All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[project]
name = "competition-check-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.21.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bs4==0.0.2",
    "certifi==2025.6.15",
    "dotenv==0.9.9",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.6.3",
    "outcome==1.3.0.post0",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pysocks==1.7.1",
    "python-dotenv==1.1.1",
    "selenium==4.34.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3[socks]==2.4.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "yarl==1.20.1",
]
