[project]
name = "abitassistant-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "aiogram==3.21.0",
    "aiohttp==3.12.13",
    "asyncpg==0.30.0",
    "bs4>=0.0.2",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
]
